--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 layout: page
 title: Hi, I'm Saar
 subtitle: Software Developer / Event Coordinate / Extreme Traveler
-bigimg: /img/big-imgs/hike1.jpg
-bigimg: /img/big-imgs/hike2.jpg
-bigimg: /img/big-imgs/hike3.jpg
+bigimg: "/img/big-imgs/hike2.jpg" "/img/big-imgs/hike1.jpg"
 use-site-title: true
 ---
 
