--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Hi, I'm Saar
 subtitle: Software Developer / Event Coordinate / Extreme Traveler
-bigimg: "/img/big-imgs/hike1.jpg","/img/big-imgs/hike2.jpg"
+bigimg: "/img/big-imgs/hike1.jpg,/img/big-imgs/hike2.jpg"
 use-site-title: true
 ---
 
