--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 layout: page
 title: Hi, I'm Saar
 subtitle: Software Developer / Event Coordinate / Extreme Traveler
-bigimg: "/img/big-imgs/hike1.jpg,/img/big-imgs/hike2.jpg"
+bigimg:
+  - /img/big-imgs/hike1.jpg: First one
+  - /img/big-imgs/hike2.jpg: 2nd, California
+  - /img/big-imgs/hike3.jpg: The end of the world
 use-site-title: true
 ---
 
