--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Saar
-subtitle: Software Developer / Event Coordinate / Extreme Traveler
+subtitle: Computer Engineer / Event Coordinator / Travel Connoisseur
 bigimg:
   - /img/big-imgs/hike1.jpg: First one
   - /img/big-imgs/hike2.jpg: 2nd, California
