--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hi, I'm Saar
-subtitle: Computer Engineer / Event Coordinator / Travel Connoisseur
+subtitle: Engineer / Coordinator / Traveler
 bigimg:
   - /img/big-imgs/hike1.jpg: First one
   - /img/big-imgs/hike2.jpg: 2nd, California
