--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@ layout: page
 title: Hi, I'm Saar
 subtitle: Engineer / Coordinator / Traveler
 bigimg:
-  - /img/big-imgs/hike1.jpg: First one
-  - /img/big-imgs/hike2.jpg: 2nd, California
-  - /img/big-imgs/hike3.jpg: The end of the world
+  - /img/big-imgs/1406Birthright.jpg: Birthright, April 2014
+  - /img/big-imgs/1512Sister.jpg: Ice Skating with Sister, May 2015
+  - /img/big-imgs/1709Neshama.jpg: Camp Neshama, Sept 2017
+  - /img/big-imgs/1711IACDC.jpg: IAC Conference in DC, Nov 2017
+  - /img/big-imgs/1804Hillel.jpg: SJSU Hillel, April 2018
+  - /img/big-imgs/1807Israel.jpg: LAJ Israel Trip, July 2018
+  - /img/big-imgs/1808CampNai.jpg: Camp Nai Nai Nai, Aug 2018
+  - /img/big-imgs/1810HikeRedwood.jpg: Hike to Redwood Santa Cruz, Oct 2018
+  - /img/big-imgs/1812CYPHannukah.jpg: CYP Hannukah, Dec 2018
+  - /img/big-imgs/1812LatkeBall.jpg: Latke Ball, Dec 2018
+  - /img/big-imgs/1902HikeUvas.jpg: Hike to Uvas Canyon Waterfalls, Feb 2019
+  - /img/big-imgs/1902JHTC.jpg: JHTC 2.0 Stoplight Party, Feb 2019
 use-site-title: true
 ---
 
