Getting buttons on homepage commented out

--- a/index.html
+++ b/index.html
@@ -18,18 +18,28 @@ bigimg:
 use-site-title: true
 ---
 
-<!-- <strong>Testing this</strong>
-<i class="fas fa-magic"></i>
+<!-- <div class="row row-eq-height align-items-center">
+    <div class="col-sm-4 col-xs-4 text-center" style="background-color:yellow;">
+        Want to get to know me better?
+        Want to get to know me better?
+        Want to get to know me better?
+        <a href="https://saarx.com/aboutme/" role="button" class="btn btn-primary btn-lg btn-block">About Me</a>
+    </div>
+    <div class="col-sm-4 col-xs-4 text-center" style="background-color:blue;">
+        New to the Jewish Community and want to attend more events?
+        New to the Jewish Community and want to attend more events?
+        New to the Jewish Community and want to attend more events?
+        <a href="https://saarx.com/cal/" role="button" class="btn btn-success btn-lg btn-block">Events</a>
+    </div>
+    <div class="col-sm-4 col-xs-4 text-center" style="background-color:gray;">
+        Looking to partner with some of my events?
+        Looking to partner with some of my events?
+        Looking to partner with some of my events?
+        <a href="https://saarx.com/cohost/" role="button" class="btn btn-info btn-lg btn-block">Cohosts</a>
+    </div>
+</div> -->
 
-<div class="container-fluid">
-<div class="row align-items-center justify-content-center">
-    <div class="col-sm-4" style="background-color:yellow;">.col-xs-9 .col-md-7</div>
-    <div class="col-sm-4" style="background-color:blue;">.col-xs-3 .col-md-5</div>
-    <div class="col-sm-4" style="background-color:gray;">.col-xs-3 .col-md-5</div>
-    <div class="w-100"></div>
-</div></div> -->
 
-    <!-- <div class="clearfix visible-xs"></div> -->
 
 
 <div class="posts-list">
