--- a/index.html
+++ b/index.html
@@ -18,29 +18,30 @@ bigimg:
 use-site-title: true
 ---
 
-<!-- <div class="row row-eq-height align-items-center">
-    <div class="col-sm-4 col-xs-4 text-center" style="background-color:yellow;">
-        Want to get to know me better?
-        Want to get to know me better?
-        Want to get to know me better?
+<div class="row row-eq-height" style="font-size:150%;font-family:Lucida Sans Unicode">
+    <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
+        <strong>Want to get to know me better?</strong>
+    </p></div>
+    <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
+        <strong>New to the Jewish Community</strong>?
+    </p></div>
+    <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
+        <strong>Looking to cohost with me?</strong>
+    </p></div>
+</div>
+<div class="row row-eq-height" >
+    <div class="col-sm-4 col-xs-4 text-center vcenter">
         <a href="https://saarx.com/aboutme/" role="button" class="btn btn-primary btn-lg btn-block">About Me</a>
     </div>
-    <div class="col-sm-4 col-xs-4 text-center" style="background-color:blue;">
-        New to the Jewish Community and want to attend more events?
-        New to the Jewish Community and want to attend more events?
-        New to the Jewish Community and want to attend more events?
+    <div class="col-sm-4 col-xs-4 text-center vcenter">
         <a href="https://saarx.com/cal/" role="button" class="btn btn-success btn-lg btn-block">Events</a>
     </div>
-    <div class="col-sm-4 col-xs-4 text-center" style="background-color:gray;">
-        Looking to partner with some of my events?
-        Looking to partner with some of my events?
-        Looking to partner with some of my events?
+    <div class="col-sm-4 col-xs-4 text-center vcenter">
         <a href="https://saarx.com/cohost/" role="button" class="btn btn-info btn-lg btn-block">Cohosts</a>
     </div>
-</div> -->
+</div>
 
-
-
+<br>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
