Font sizes front page for mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ bigimg:
 use-site-title: true
 ---
 
-<div class="row row-eq-height" style="font-size:150%;font-family:Lucida Sans Unicode">
+<div class="row row-eq-height rtext" style="font-family:Lucida Sans Unicode">
     <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
         <strong>Want to get to know me better?</strong>
     </p></div>
