switched pictures index/about

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Hi, I'm Saar
 subtitle: Engineer / Coordinator / Traveler
 bigimg:
   - /img/big-imgs/1406Birthright.jpg: Birthright, April 2014
-  - /img/big-imgs/1512Sister.jpg: Ice Skating with Sister, May 2015
   - /img/big-imgs/1709Neshama.jpg: Camp Neshama, Sept 2017
   - /img/big-imgs/1711IACDC.jpg: IAC Conference in DC, Nov 2017
+  - /img/big-imgs/1802JHTC.jpg: JHTC 2.0 Stoplight Party, Feb 2018
   - /img/big-imgs/1804Hillel.jpg: SJSU Hillel, April 2018
   - /img/big-imgs/1807Israel.jpg: LAJ Israel Trip, July 2018
   - /img/big-imgs/1808CampNai.jpg: Camp Nai Nai Nai, Aug 2018
