Update button text

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ use-site-title: true
 ---
 
 <div class="row row-eq-height rtext" style="font-family:Lucida Sans Unicode">
-    <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
+    <div class="col-sm-4 col-xs-4 vcenter">
         <strong>Want to get to know me better?</strong>
+    </div>
+    <div class="col-sm-4 col-xs-4 vcenter"><p>
+        <strong>Looking for something to do</strong>?
     </p></div>
-    <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
-        <strong>New to the Jewish Community</strong>?
-    </p></div>
-    <div class="col-sm-4 col-xs-4 text-center vcenter"><p>
-        <strong>Looking to cohost with me?</strong>
+    <div class="col-sm-4 col-xs-4 vcenter"><p>
+        <strong>Interested in making events?</strong>
     </p></div>
 </div>
 <div class="row row-eq-height" >
