--- a/index.html
+++ b/index.html
@@ -18,27 +18,14 @@ bigimg:
 use-site-title: true
 ---
 
-<div class="row row-eq-height rtext" style="font-family:Lucida Sans Unicode">
-    <div class="col-sm-4 col-xs-4 vcenter">
-        <strong>Want to get to know me better?</strong>
-    </div>
-    <div class="col-sm-4 col-xs-4 vcenter"><p>
-        <strong>Looking for something to do</strong>?
-    </p></div>
-    <div class="col-sm-4 col-xs-4 vcenter"><p>
-        <strong>Interested in making events?</strong>
-    </p></div>
-</div>
-<div class="row row-eq-height" >
-    <div class="col-sm-4 col-xs-4 text-center vcenter">
-        <a href="https://saarx.com/aboutme/" role="button" class="btn btn-primary btn-lg btn-block">About Me</a>
-    </div>
-    <div class="col-sm-4 col-xs-4 text-center vcenter">
-        <a href="https://saarx.com/cal/" role="button" class="btn btn-success btn-lg btn-block">Events</a>
-    </div>
-    <div class="col-sm-4 col-xs-4 text-center vcenter">
-        <a href="https://saarx.com/cohost/" role="button" class="btn btn-info btn-lg btn-block">Cohosts</a>
-    </div>
+<div class="row cleantxt">
+  <div class="button-row">
+    <ul>
+      <li><a href="aboutme" class="btn btn-primary">About me</a></li>
+      <li><a href="cal" class="btn btn-success">Join Events</a></li>
+      <li><a href="cohost" class="btn btn-info">Cohost Events</a></li>
+    </ul>
+  </div>
 </div>
 
 <br>
